button on small fixed

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -200,11 +200,15 @@ main picture.hero {
 
 main picture.hero img {
   width: 100%;
+  height: 100%;
   max-width: 100%;
   object-fit: cover;
 }
 
 #joinBtn {
+  position: absolute;
+  top: 450px;
+  right: 100px;
   background-color: #bc6c25;
   font-size: 18px;
   color: black;
